Added non-shop-related entities to server side code

--- a/.yo-rc.json
+++ b/.yo-rc.json
@@ -43,5 +43,5 @@
     "skipClient": false,
     "skipServer": false
   },
-  "entities": ["Address", "FriendRequest", "Group", "GroupInvitation", "Message", "Offer", "Product", "Shop", "ShopGroup"]
+  "entities": ["Address", "Friend", "FriendRequest", "Group", "GroupInvitation", "Message", "Offer", "Product", "Shop", "ShopGroup"]
 }
